<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        tools:context=".FormLogin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/orange"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/cursor_shape_login"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/light_gray"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSenhaLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_marginHorizontal="20dp"
            android:background="@color/dark_gray"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/orange"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietSenhaLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/cursor_shape_login"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/light_gray"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:hint="@string/hint_senha"
                android:inputType="numberPassword"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="15dp"
            android:text="@string/txt_entrar"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:backgroundTint="@color/black"
            app:strokeWidth="2dp"
            app:strokeColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frase_ajuda"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvInscrevaSe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frase_inscrevase"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="20dp"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>