<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".DetalhesFilme">

        <ImageView
            android:id="@+id/ivCapa"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivCapa"
            android:layout_marginTop="20dp"
            android:text="@string/txt_filmes"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"/>

        <ImageView
            android:id="@+id/ivAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNome"
            app:layout_constraintEnd_toStartOf="@id/bAssitir"
            android:layout_marginTop="20dp"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="35dp"
            android:src="@drawable/ic_add" />

        <TextView
            android:id="@+id/tvLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivAdd"
            app:layout_constraintEnd_toStartOf="@id/bAssitir"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:text="@string/txt_lista"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/bAssitir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvLista"
            app:layout_constraintTop_toBottomOf="@id/tvNome"
            app:layout_constraintEnd_toStartOf="@id/tvInfo"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:drawableLeft="@drawable/ic_play"
            android:text="@string/botton_Assistir"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:backgroundTint="@color/white" />

        <ImageView
            android:id="@+id/iInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/bAssitir"
            app:layout_constraintTop_toBottomOf="@id/tvNome"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="45dp"
            android:src="@drawable/ic_info" />

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/bAssitir"
            app:layout_constraintTop_toBottomOf="@id/iInfo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="40dp"
            android:text="@string/txt_info"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bAssitir"
            android:layout_margin="20dp"
            android:text="@string/frase_criiar"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvElenco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescricao"
            android:layout_margin="20dp"
            android:text="@string/frase_criiar"
            android:textColor="@color/white"
            android:textSize="14sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>